partially implemented spring boot